<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="false">

    <TextView
        android:id="@+id/titleCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/titleCat"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:columnCount="1" >

        <EditText
            android:id="@+id/editProduct"
            android:layout_width="120dp"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="0"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/titleProduct1"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="0"
            android:text="@string/product"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="10dp" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:columnCount="1" >

        <EditText
            android:id="@+id/editTransit"
            android:layout_width="120dp"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="0"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/titleTransit1"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="0"
            android:text="@string/transit"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="10dp" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:columnCount="1" >

        <EditText
            android:id="@+id/editEntertainment"
            android:layout_width="120dp"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="0"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/titleEntertainment1"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="0"
            android:text="@string/entertainment"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="10dp" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:columnCount="1" >

        <EditText
            android:id="@+id/editKomm"
            android:layout_width="120dp"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="0"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/titleKomm1"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="0"
            android:text="@string/komm"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="10dp" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:columnCount="1" >

        <EditText
            android:id="@+id/editOther"
            android:layout_width="120dp"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="0"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/titleOther1"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="0"
            android:text="@string/other"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="10dp" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:columnCount="1" >

        <EditText
            android:id="@+id/editCommon"
            android:layout_width="120dp"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="0"
            android:ems="10"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="number" />

        <TextView
            android:id="@+id/titleCommon1"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="0"
            android:text="@string/common"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="10dp" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1" >


        <Button
            android:id="@+id/buttonSum"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_marginRight="10dp"
            android:layout_row="0"
            android:text="@string/buttonSum" />

    </GridLayout>

</LinearLayout>