<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvMonthTitle"
        android:id="@+id/tvMonthTitle"
        android:layout_gravity="center_horizontal" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/product"
            android:id="@+id/titleProduct2"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/zero"
            android:id="@+id/tvProduct"
            android:layout_row="0"
            android:layout_column="11"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/transit"
            android:id="@+id/titleTransit2"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/zero"
            android:id="@+id/tvTransit"
            android:layout_row="0"
            android:layout_column="14"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/entertainment"
            android:id="@+id/titleEntertainment2"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/zero"
            android:id="@+id/tvnEntertainment"
            android:layout_row="0"
            android:layout_column="13"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/komm"
            android:id="@+id/titleKomm2"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/zero"
            android:id="@+id/tvKomm"
            android:layout_row="0"
            android:layout_column="14"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/other"
            android:id="@+id/titleOther2"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/zero"
            android:id="@+id/tvOther"
            android:layout_row="0"
            android:layout_column="13"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/common"
            android:id="@+id/titleCommon2"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/zero"
            android:id="@+id/tvCommon"
            android:layout_row="0"
            android:layout_column="13"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical" />
    </GridLayout>
</LinearLayout>